Working on fixing app state